# nyanpasu

./: .gitlab-ci.yml  LICENSE  Makefile  README.md  nyanpasu.cabal  stack.yaml
app/: Main.hs
src/Language/: Nyanpasu.hs
src/Language/Nyanpasu/: Error.hs  IR.hs  LL.hs  Options.hs  Samples.hs  Types.hs  Utils.hs
src/Language/Nyanpasu/Assembly/: X86.hs
src/Language/Nyanpasu/Assembly/X86/: CodeGen.hs  Interpreter.hs
src/Language/Nyanpasu/IR/: ANF.hs  AST.hs  CodeGen.hs  CodeGenUtils.hs  Interpreter.hs  Rewrites.hs
src/Language/Nyanpasu/IR/Rewrites/: ANF.hs  AST.hs
src/Language/Nyanpasu/IR/Rewrites/ANF/: AstToAnf.hs  TailCalls.hs
src/Language/Nyanpasu/IR/Rewrites/AST/: LambdaLifting.hs
src/Language/Nyanpasu/LL/: ANF.hs  AST.hs  CodeGen.hs  CodeGenUtils.hs  Error.hs  Interpreter.hs
test/: Comparisons.hs  Interpreter.hs  Programs.hs  Simple.hs  Testing.hs  Tests.hs
wrapper/: main.c
