name:                nyanpasu
version:             0.1.0.0
synopsis:            Working through CS4410/6410
description:         Please see README.md
homepage:            https://gitlab.com/gilmi/nyanpasu
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2017 Gil Mizrahi
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  hs-source-dirs:      src
  exposed-modules:
     Language.Nyanpasu
     Language.Nyanpasu.LL
     Language.Nyanpasu.LL.AST
     Language.Nyanpasu.LL.ANF
     Language.Nyanpasu.LL.Interpreter
     Language.Nyanpasu.LL.CodeGenUtils
     Language.Nyanpasu.Assembly.X86
     Language.Nyanpasu.Assembly.X86.CodeGen
     Language.Nyanpasu.Assembly.X86.Interpreter
     Language.Nyanpasu.Error
     Language.Nyanpasu.Utils
     Language.Nyanpasu.Types
     Language.Nyanpasu.Options
  other-modules:
  build-depends:
     base >= 4.7 && < 5
    ,containers
    ,vector
    ,bifunctors
    ,groom
    ,transformers
    ,mtl
    ,syb
    ,deepseq
    ,groom
    ,text
    ,bytestring
    ,optparse-applicative
    ,ansi-terminal >= 0.6.2 && < 0.7
    ,rainbow >= 0.28.0.0 && < 0.29
    ,megaparsec >= 5.0.0 && < 6
    ,uniplate

  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveFunctor
      EmptyDataDecls
      FlexibleContexts
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      PatternGuards
      PatternSynonyms
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      ViewPatterns

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-type-defaults

executable nyanpasu
  default-language:    Haskell2010
  ghc-options:         -fno-warn-type-defaults
                       -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , nyanpasu

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  other-modules:
    Testing
    Simple
    Comparisons
    Interpreter
  build-depends:       base
                     , groom
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , nyanpasu
  ghc-options:         -fno-warn-type-defaults
                       -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveFunctor
      EmptyDataDecls
      FlexibleContexts
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      PatternGuards
      PatternSynonyms
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      ViewPatterns

source-repository head
  type:     git
  location: https://gitlab.com/gilmi/nyanpasu
