name:                nyanpasu
version:             0.1.0.0
synopsis:            Building a compiler incrementally. Working through CS4410/6410 and CS75
description:         Please see README.md
homepage:            https://gitlab.com/gilmi/nyanpasu
license:             BSD3
license-file:        LICENSE
author:              Gil Mizrahi
maintainer:          gilmi@posteo.net
copyright:           2018 Gil Mizrahi
category:            Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:
     Language.Nyanpasu
     Language.Nyanpasu.Samples
     Language.Nyanpasu.IR
     Language.Nyanpasu.IR.AST
     Language.Nyanpasu.IR.ANF
     Language.Nyanpasu.IR.Interpreter
     Language.Nyanpasu.IR.CodeGenUtils
     Language.Nyanpasu.IR.CodeGen
     Language.Nyanpasu.IR.Rewrites
     Language.Nyanpasu.IR.Rewrites.AST
     Language.Nyanpasu.IR.Rewrites.AST.LambdaLifting
     Language.Nyanpasu.IR.Rewrites.ANF
     Language.Nyanpasu.IR.Rewrites.ANF.AstToAnf
     Language.Nyanpasu.IR.Rewrites.ANF.TailCalls
     Language.Nyanpasu.Error
     Language.Nyanpasu.Utils
     Language.Nyanpasu.Types
     Language.Nyanpasu.Options
  other-modules:
  build-depends:
     base
    ,containers
    ,vector
    ,bifunctors
    ,groom
    ,transformers
    ,mtl
    ,syb
    ,deepseq
    ,groom
    ,text
    ,bytestring
    ,optparse-applicative
    ,ansi-terminal
    ,rainbow
    ,megaparsec
    ,uniplate
    ,x86-debug

  default-extensions:
      ConstraintKinds
      DataKinds
      DeriveFunctor
      EmptyDataDecls
      FlexibleContexts
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      PatternGuards
      PatternSynonyms
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      ViewPatterns

  default-language:    Haskell2010
  ghc-options:         -Wall
                       -fno-warn-type-defaults

executable nyanpasu
  default-language:    Haskell2010
  ghc-options:         -fno-warn-type-defaults
                       -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , nyanpasu

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  other-modules:
    Testing
    Simple
    Comparisons
    Interpreter
    Programs
  build-depends:       base
                     , groom
                     , text
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , nyanpasu
                     , x86-debug
  ghc-options:         -fno-warn-type-defaults
                       -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
      ConstraintKinds
      DeriveFunctor
      EmptyDataDecls
      KindSignatures
      LambdaCase
      MultiParamTypeClasses
      PatternGuards
      PatternSynonyms
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TupleSections
      ViewPatterns

source-repository head
  type:     git
  location: https://gitlab.com/gilmi/nyanpasu
